# flashcard-app

./: README.md
server/: alembic.ini  pyproject.toml
server/migrations/: env.py
server/migrations/versions/: 413b428a7bd1_v3__include_collection_table.py  4f877f0e5f88_v2__create_category_table.py  7d3e78af20d1_v1__create_user_table.py
server/src/: app.py
server/src/config/: database.py  middleware.py  security.py
server/src/controller/: AuthController.py  CategoryController.py  CollectionController.py  UserController.py
server/src/domain/: Category.py  Collection.py  User.py
server/src/schema/: CategorySchema.py  CollectionSchema.py  UserSchema.py
server/src/service/: AuthService.py  CategoryService.py  CollectionService.py  UserService.py
server/tests/: app_test.py  conftest.py  test_app.py  test_category.py  test_db.py  test_security.py  test_user.py
web/: index.html  package.json  vite.config.ts
web/src/: App.tsx
web/src/components/: Card.tsx  Layout.tsx  Sidebar.tsx
web/src/components/Sidebar/: MobileSideBar.tsx
web/src/components/interface/: Flashcard.ts
web/src/components/modal/: AddFlashcard.tsx
web/src/service/: FlashcardService.tsx
